syntax = "proto3";

service datamover {
	rpc Runjob(RunJobRequest) returns (RunJobResponse) {}
	rpc DoLifecycleAction(LifecycleActionRequest) returns (LifecycleActionResonse) {}
}

message KV {
	string key = 1;
	string value = 2;
}

message Filter {
	string prefix = 1;
	repeated KV tag = 2;
}

message Connector {
	string Type = 1; //soda,aws,azure,hwcloud,etc.
	string BucketName = 2;
	repeated KV ConnConfig = 3;
	string BackendName = 4;
}

message RunJobRequest{
	string id = 1;
	string tenanId = 2;
	string userId = 3;
	Connector sourceConn = 4;
	Connector destConn = 5;
	Filter filt = 6;
	bool remainSource = 7;
}

message RunJobResponse {
	string err = 1;
}

message LifecycleActionRequest {
	string objKey = 1;		// for transition and expiration
	string bucketName = 2;	// for transition and expiration
	string versionId = 3;	// for transition and expiration
	string storageMeta = 4;	// for transition and expiration
	string objectId = 5;	// for transition and expiration
	int32 action = 6;		// 0-Expiration, 1-IncloudTransition, 2-CrossCloudTransition, 3-AbortMultipartUpload
	int32 sourceTier = 7;   // only for transition
	int32 targetTier = 8;   // only for transtion
	string sourceBackend = 9;	//for transition and expiration
	string targetBackend = 10;	//for transition and abort incomplete multipart upload
	string targetBucket = 11; // for transition to specific backend
	int64 objSize = 12;			// for transition
	string uploadId = 13;		// only for abort incomplete multipart upload
}

message LifecycleActionResonse {
	string err = 1;
}
